procore_logs/k8s/call_logs/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-logs-frontend
  labels:
    app: call-logs
    tier: frontend
  spec:
    replicas: 2
    selector:
      matchLabels:
        labels:
          app: call-logs
          tier: frontend
    template:
      metadata:
        labels:
          app: call-logs
          tier: frontend
      spec:
        containers:
        -name: call-logs-frontend
        image: your-registry/call-logs-frontend:latest
        ports:
          -containerPort: 3002
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
