procore_logs/k8s/call_logs/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: call-logs-backend
spec:
  selector:
    app: call-logs
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082 # Updated to match your PORT
